# marketplaceinspace_api

./: .gitignore  Cargo.toml  README.md
exante_api/: Cargo.toml
exante_api/src/: jwt_token.rs  lib.rs  lib2.rs
oanda_api/: Cargo.toml
oanda_api/src/: account.rs  lib.rs  links.rs  stream.rs  token.rs
src/: main.rs
trading_hours/: Cargo.toml
trading_hours/src/: trading_hours.rs
trading_hours/src/static_data/: trading_hours.json
