[package]
name = "marketplaceinspace_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "4dcd928", features = ["json"] }
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
exante_api = { path = "exante_api" }

[dev-dependencies]

[toolchain]
channel = "stable"

[workspace]
members = [
    "oanda_api",
    "exante_api",
]

[[bin]]
name = "marketplaceinspace_api"
path = "src/main.rs"