[package]
name = "oanda_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "4dcd928", features = ["json"] }
dotenv = "0.15.0"
chrono = "0.2.16"
